--- a/public/index.html
+++ b/public/index.html
@@ -168,8 +168,8 @@
                           v-bind:src="'./assets/flags/'+ predictionsList[indexOfPrediction].team1Id+'.webp'" /> </h5>
                         <span class="team-name">{{predictionsList[indexOfPrediction].team1Name}}</span>
                       </div>
-                      <div class="col-4" style=" display: inline-flex; margin-top: 10px;">
-
+                      <div class="col-4 text-center" style="margin-top: 20px;">
+                          <h3 style="font-size:30px;color:white">{{allPredictionsList[0].ResultMatch}}</h3>
                       </div>
                       <div class="teamContainer">
                         <img class="rounded imgst"
@@ -221,11 +221,11 @@
                               <span class="team-name">{{item.team1Name}}</span>
                             </div>
                             <div class="col-4" style=" display: inline-flex; margin-top: 10px;">
-                              <input v-model="item.scoreTeam1" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.scoreTeam1" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0"
                                 ondrop="return false;" onpaste="return false;">
                               <h1 class="slash" style="margin: 8 10 0 10;">-</h1>
-                              <input v-model="item.scoreTeam2" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.scoreTeam2" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0"
                                 ondrop="return false;" onpaste="return false;">
                             </div>
@@ -298,11 +298,11 @@
                               <span class="team-name">{{item.team1Name}}</span>
                             </div>
                             <div class="col-4" style=" display: inline-flex; margin-top: 10px;">
-                              <input v-model="item.ScoreTeam1" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.ScoreTeam1" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0"
                                 ondrop="return false;" onpaste="return false;">
                               <h1 class="slash" style="margin: 8 10 0 10;">-</h1>
-                              <input v-model="item.ScoreTeam2" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.ScoreTeam2" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0"
                                 ondrop="return false;" onpaste="return false;">
                             </div>
@@ -360,10 +360,10 @@
                               <span class="team-name">{{item.team1Name}}</span>
                             </div>
                             <div class="col-4" style=" display: inline-flex; margin-top: 10px;">
-                              <input v-model="item.scoreTeam1" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.scoreTeam1" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0">
                               <h1 class="slash" style="margin: 8 10 0 10;">-</h1>
-                              <input v-model="item.scoreTeam2" type="number" class="form-control input-default"
+                              <input onClick="this.select();" v-model="item.scoreTeam2" type="number" class="form-control input-default"
                                 style=" font-size: 20; font-weight: bold; text-align: center; " placeholder="0">
                             </div>
                             <div class="teamContainer">
@@ -513,10 +513,10 @@
       </div>
       <div v-else style="margin-top: -140px;padding: 0px 50px;max-width: 600px;">
         <div class="mb-3 text-center">
-          <input v-model="pass" type="text" class="form-control">
+          <input v-model="pass"   type="text" class="form-control">
         </div>
         <div class="text-center">
-          <button id="btnLogin" type="button" v-on:click="Login" class="customeBtn"
+          <button id="btnLogin" type="button" v-on:click="Login"  class="customeBtn"
             style="font-size: 20px;width: 100%;">
             Login
           </button>
