--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
                         </div>
                       </div>
                     </div>
-                    <button class="btn btn-success mb-2" v-on:click="UpdateAllPredictions()">Submit</button>
+                    <button id="btnAllUpdate" class="btn btn-success mb-2 mt-3" v-on:click="ConfirmUpdateAllPredictions()">Submit</button>
 
 
                   </div>
