--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,13 @@
     left:0px;
     z-index:1000;
 }
+
+.chk{
+color: white;
+font-size: 20px;
+font-weight: 500;
+margin-left: 20px;
+}
    
   </style>
 </head>
@@ -60,6 +67,18 @@
   <div id="container" class="container">
     <div id="app">      
       <div v-if="isImportSentences">
+        <div class="form-check chk">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="chkQuestion">
+          <label class="form-check-label" for="flexRadioDefault1">
+            Question
+          </label>
+        </div>
+        <div class="form-check chk">
+          <input class="form-check-input" type="radio"  name="flexRadioDefault" id="chkSentencese" checked>
+          <label class="form-check-label" for="flexRadioDefault2">
+            Sentence
+          </label>
+        </div>
         <div class="row" style="margin: 20px 5px;">
           <div class="mb-3">
             <label class="form-label" style="font-weight: bold;color: white;">Number of Sentence Practice</label>
@@ -72,6 +91,28 @@
           <button v-on:click="start()" type="button" class="btn btn-success customeBtn" >Start</button>
           <button v-on:click="inputText=''" type="button" class="btn btn-danger customeBtn">Clear</button>
         </div>
+      </div>
+      <div v-else-if="isQuestion">
+        <div v-if="isDone" class="d-flex justify-content-center mb-5">
+          <img src="assets/images/Done.png" style="height: 200px;">
+        </div>
+        <div v-else>
+          <div class="card">
+            <div class="card-header">
+              Featured
+            </div>
+            <div class="card-body">
+              <h5 class="card-title">{{ currentQuestion }}</h5>            
+              <button id="btnQuestion" style="width: 80px;" type="button" class="btn btn-success" v-on:click="btnQuestion()" >Answer</button>
+            </div>
+          </div>
+          <div  class="card" style="margin-top: 40px; min-height: 150px;">
+            <div  class="card-body">
+              <p v-if="ShowTheAnswer" class="card-title">{{ currentAnswer }}</p>            
+            </div>
+          </div>
+        </div>
+
       </div>
       <div v-else>
         <div v-if="isDone" class="d-flex justify-content-center mb-5">
