--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,11 @@ margin-left: 20px;
           <div class="mb-3">
             <label class="form-label" style="font-weight: bold;color: white;">Number of Sentence Practice</label>
             <input type="number" v-model="takeSentenceNum" class="form-control mb-3">
-            <textarea class="form-control" v-model="inputText" rows="6"></textarea>
+            <div class="input-group mb-3">
+              <input type="file" class="form-control" id="inputGroupFile02" onchange='openFile(event)'>
+              <label class="input-group-text" for="inputGroupFile02">Upload</label>
+            </div>
+            <textarea id='output' class="form-control" v-model="inputText" rows="6"></textarea>
             <p class="mt-3" style="font-size: 18px;color: white;padding-left: 10px;">{{InputSentenceCount}} sentences entered. </p>
           </div>
         </div>
