--- a/public/index.html
+++ b/public/index.html
@@ -68,6 +68,12 @@ margin-left: 20px;
     <div id="app">      
       <div v-if="isImportSentences">
         <div class="form-check chk">
+          <input class="form-check-input" type="radio" name="flexRadioDefault" id="chkSearch">
+          <label class="form-check-label" for="flexRadioDefault3">
+            Search
+          </label>
+        </div>
+        <div class="form-check chk">
           <input class="form-check-input" type="radio" name="flexRadioDefault" id="chkQuestion">
           <label class="form-check-label" for="flexRadioDefault1">
             Question
@@ -112,7 +118,7 @@ margin-left: 20px;
                
                 <div class="card-body">
                   <h5 class="card-title">{{item.qu}}</h5>
-                  <p class="card-text">{{item.ans}}</p>
+                  <p class="card-text" style="white-space: pre;">{{item.ans}}</p>
                 </div>
               </div>
 
@@ -131,7 +137,7 @@ margin-left: 20px;
           </div>
           <div  class="card" style="margin-top: 40px; min-height: 150px;">
             <div  class="card-body">
-              <p v-if="ShowTheAnswer" class="card-title">{{ currentAnswer }}</p>            
+              <p v-if="ShowTheAnswer" class="card-title" style="white-space:pre;">{{ currentAnswer }}</p>            
             </div>
           </div>
         </div>
